# src/shared/infra/http/routes/index.ts
@@ -3,6 +3,7 @@ import { Router } from 'express';
 import { authenticateRoutes } from './authenticate.routes';
 import { carsRoutes } from './cars.routes';
 import { categoriesRoutes } from './categories.routes';
+import { passwordRoutes } from './password.routes';
 import { rentalRoutes } from './rental.routes';
 import { specificationsRoutes } from './specifications.routes ';
 import { usersRouters } from './user.routes';
@@ -14,7 +15,7 @@ router.use('/specifications', specificationsRoutes);
 router.use('/users', usersRouters);
 router.use('/cars', carsRoutes);
 router.use('/rentals', rentalRoutes);
-
+router.use('/password', passwordRoutes);
 router.use(authenticateRoutes);
 
 export { router };
